# chorus-deck

./: .gitignore  README.md  pyproject.toml
src/chorus_deck/: __init__.py  cli.py  models.py  ppt_handler.py  ppt_reader.py
